# bidding-server

./: Makefile  README.md  pyproject.toml
.github/workflows/: build-ci.yaml  test-ci.yaml
bidding_server/: bidding_strategy.py  config.py  ctr_prediction.py  data_template.py  dbs.py  get_ads.py  main.py
docker/: Dockerfile
docs/: oltp_data_schema.md
tests/: test_bidding_strategy.py  test_ctr_prediction.py
