[tool.poetry]
name = "bidding-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bidding_server"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
psycopg2-binary = "^2.9.6"
requests = "^2.31.0"
rich = "^13.4.2"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
